--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 executors:
   my-executor:
-    working_directory: ~/project/src/src
+    working_directory: ~/repo
     docker:
       - image: circleci/node:lts
 
