--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,8 @@ jobs:
       - image: circleci/node:lts
       - image: circleci/postgres:9.6.2-alpine
     steps:
-      - checkout
+      - checkout:
+          path: ~/project
       - install_deps
       - run:
           name: Run integration tests
