--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,10 +38,12 @@ jobs:
     docker:
       - image: circleci/node:lts
       - image: circleci/postgres:9.6.2-alpine
+    working_directory: ~/project/src
     steps:
       - checkout:
           path: ~/project
       - install_deps
+
       - run:
           name: Run integration tests
           command: npm run test-integration
