--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,10 @@ jobs:
   integration-tests:
     docker:
       - image: circleci/node:lts
-      - image: circleci/postgres:9.6.2-alpine
+      - image: circleci/postgres:latest
+          environment:
+            POSTGRES_USER: postgres
+            POSTGRES_DB: servian
     working_directory: ~/project/src
     steps:
       - checkout:
