--- a/src/package.json
+++ b/src/package.json
@@ -9,7 +9,7 @@
     "test-unit": "cross-env NODE_ENV=unit mocha test/unit --reporter mocha-junit-reporter --reporter-options mochaFile=./test_outputs/unit_test.xml ",
     "test-coverage": "cross-env NODE_ENV=unit nyc --reporter=lcov --reporter=text-summary mocha test/unit",
     "test-integration": "cross-env DB_USERNAME=postgres DB_PASSWORD=password DB_NAME=servian DB_HOSTNAME=localhost NODE_ENV=integration mocha test/integration",
-    "test-e2e": "cross-env NODE_ENV=e2e DB_USERNAME=postgres DB_PASSWORD=password DB_NAME=servian"
+    "test-e2e": "cross-env NODE_ENV=e2e DB_USERNAME=postgres DB_PASSWORD=password DB_NAME=servian npx qawolf test --headless .qawolf/tests"
   },
   "dependencies": {
     "bluebird": "^3.5.1",
@@ -31,9 +31,12 @@
     "eslint": "^6.8.0",
     "eslint-plugin-node": "^11.0.0",
     "expect.js": "^0.3.1",
+    "jest": "^25.3.0",
     "mocha": "^3.0.2",
     "mocha-junit-reporter": "^1.23.3",
     "nyc": "^15.0.0",
+    "playwright": "^0.13.0",
+    "qawolf": "^0.13.2",
     "supertest": "^2.0.0"
   }
 }
