--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,7 @@ jobs:
   e2e-test:
     docker:
       - image: circleci/node:lts
-      - image: qawolf/playwright-ci:latest
+      - image: qawolf/playwright-ci:v0.9.0
       - image: circleci/postgres:latest
         environment:
           POSTGRES_DB: servian
@@ -84,6 +84,8 @@ jobs:
 
       - run:
           command: npm run test-e2e
+          environment:
+            QAW_HEADLESS: true
 
 
 workflows:
