--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,8 +56,8 @@ jobs:
 
   e2e-test:
     docker:
-      - image: circleci/node:lts
       - image: qawolf/playwright-ci:v0.9.0
+      - image: circleci/node:lts
       - image: circleci/postgres:latest
         environment:
           POSTGRES_DB: servian
@@ -67,18 +67,33 @@ jobs:
     steps:
       - checkout:
           path: ~/project
-      - install_deps
-      - run: 
-          name: wait for database
-          command: dockerize -wait tcp://localhost:5432 -timeout 1m
+
+      - restore_cache:
+          key: dependency-cache-{{ checksum "package-lock.json" }}
 
       - run:
-          command: npm run test-e2e
+          command: npm install
+
+      - save_cache:
+          key: dependency-cache-{{ checksum "package-lock.json" }}
+          paths:
+            - ./node_modules
+
+      - run:
+          command: |
+            # # Start local server
+            # npm run start & 
+            # npx wait-on http://localhost:3000
+            npx qawolf test --headless
           environment:
+            # configure tests with environment variables
+            QAW_ARTIFACT_PATH: /tmp/artifacts
             QAW_HEADLESS: true
             POSTGRES_DB: servian
             POSTGRES_PASSWORD: password
             POSTGRES_USER: postgres
+      - store_artifacts:
+          path: /tmp/artifacts
 
 
 workflows:
