--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,7 +84,7 @@ jobs:
             # # Start local server
             # npm run start & 
             # npx wait-on http://localhost:3000
-            npx qawolf test
+            npm run test-e2e
           environment:
             # configure tests with environment variables
             QAW_ARTIFACT_PATH: /tmp/artifacts
