--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,7 @@ jobs:
   e2e-test:
     docker:
       - image: qawolf/playwright-ci:v0.9.0
-      - image: circleci/node:lts
+      - image: circleci/node:lts-browsers
       - image: circleci/postgres:latest
         environment:
           POSTGRES_DB: servian
