--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,8 +56,8 @@ jobs:
 
   e2e-test:
     docker:
-      - image: qawolf/playwright-ci:v0.9.0
-      - image: circleci/node:lts-node-browsers
+      - image: qawolf/playwright-ci:v0.9.0-browsers
+      - image: circleci/node:lts-browsers
       - image: circleci/postgres:latest
         environment:
           POSTGRES_DB: servian
@@ -81,9 +81,6 @@ jobs:
 
       - run:
           command: |
-            # # Start local server
-            # npm run start & 
-            # npx wait-on http://localhost:3000
             npm run test-e2e
           environment:
             # configure tests with environment variables
