--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,8 +56,8 @@ jobs:
 
   e2e-test:
     docker:
-      - image: qawolf/playwright-ci:v0.9.0-browsers
-      - image: circleci/node:lts-browsers
+      - image: qawolf/playwright-ci:v0.9.0
+      - image: circleci/node:lts-browsers:chrome
       - image: circleci/postgres:latest
         environment:
           POSTGRES_DB: servian
