--- a/src/package.json
+++ b/src/package.json
@@ -9,7 +9,7 @@
     "test-unit": "cross-env NODE_ENV=unit mocha test/unit --reporter mocha-junit-reporter --reporter-options mochaFile=./test_outputs/unit_test.xml ",
     "test-coverage": "cross-env NODE_ENV=unit nyc --reporter=lcov --reporter=text-summary mocha test/unit",
     "test-integration": "cross-env DB_USERNAME=postgres DB_PASSWORD=password DB_NAME=servian DB_HOSTNAME=localhost NODE_ENV=integration mocha test/integration",
-    "test-e2e": "cross-env NODE_ENV=e2e DB_USERNAME=postgres DB_PASSWORD=password DB_NAME=servian qawolf test --runInBand --chrome"
+    "test-e2e": "cross-env NODE_ENV=e2e DB_USERNAME=postgres DB_PASSWORD=password DB_NAME=servian qawolf test --runInBand"
   },
   "dependencies": {
     "bluebird": "^3.5.1",
