--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,15 +71,13 @@ jobs:
 
       - run: 
           name: wait for database
-          command: dockerize -wait tcp://localhost:5432 -timeout 1m
-      
-      - run:
-          name: start server in background
-          command: |             
-            npm run start & 
+          command: dockerize -wait tcp://localhost:5432 -timeout 1m          
+
 
       - run:
           command: |
+            npm run start:prod & 
+            npx wait-on http://localhost:3000
             npm run test-e2e
           environment:
             # configure tests with environment variables
