--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,13 +76,16 @@ jobs:
 
       - run:
           command: |
-            npm run start & 
+            npm run start:prod & 
             npx wait-on http://localhost:3000
             npm run test-e2e
           environment:
             # configure tests with environment variables
             QAW_ARTIFACT_PATH: /tmp/artifacts
             QAW_HEADLESS: true
+            POSTGRES_DB: servian
+            POSTGRES_PASSWORD: password
+            POSTGRES_USER: postgres
       - store_artifacts:
           path: /tmp/artifacts
 
