--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,12 +71,17 @@ jobs:
 
       - run: 
           name: wait for database
-          command: dockerize -wait tcp://localhost:5432 -timeout 1m          
-
-
+          command: dockerize -wait tcp://localhost:5432 -timeout 1m         
+      - run:
+          name: Download Selenium
+          command: curl -O http://selenium-release.storage.googleapis.com/3.5/selenium-server-standalone-3.5.3.jar
+      - run:
+          name: Start Selenium
+          command: java -jar selenium-server-standalone-3.5.3.jar -log test-reports/selenium.log
+          background: true 
       - run:
           command: |
-            npm run start:prod & 
+            npm run start & 
             npx wait-on http://localhost:3000
             npm run test-e2e
           environment:
