--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ jobs:
 
   e2e-test:
     docker:
-      - image: circleci/node:lts-browsers
+      - image: circleci/node:lts
       - image: circleci/postgres:latest
         environment:
           POSTGRES_DB: servian
@@ -72,12 +72,6 @@ jobs:
       - run: 
           name: wait for database
           command: dockerize -wait tcp://localhost:5432 -timeout 1m         
-      - run:
-          name: Download Selenium
-          command: curl -O http://selenium-release.storage.googleapis.com/3.5/selenium-server-standalone-3.5.3.jar
-      - run:
-          name: Start Selenium
-          command: java -jar selenium-server-standalone-3.5.3.jar -log test-reports/selenium.log
           background: true 
       - run:
           command: |
