--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
 
   integration-tests:
     docker:
-      - image: circleci/node:lts-browsers
+      - image: circleci/node:lts
       - image: circleci/postgres:latest
         environment:
           POSTGRES_DB: servian
@@ -54,8 +54,6 @@ jobs:
   e2e-test:
     docker:
       - image: circleci/node:lts-browsers
-        environment:
-          QAW_HEADLESS: true
       - image: circleci/postgres:latest
         environment:
           POSTGRES_DB: servian
@@ -66,20 +64,11 @@ jobs:
       - checkout:
           path: ~/project
       - install_deps
-
-      - run: 
-          name: wait for database
-          command: dockerize -wait tcp://localhost:5432 -timeout 1m         
-          background: true 
       - run:
           name: start background server
           command: |
             npm run start & 
             npx wait-on http://localhost:3000
-          environment:
-            POSTGRES_DB: servian
-            POSTGRES_PASSWORD: password
-            POSTGRES_USER: postgres
       - run:
           command: |
             npm run test-e2e
